Added dashboard_import in ESPHome config

--- a/firmware/ESPHome/yawl-controller-fastled.yaml
+++ b/firmware/ESPHome/yawl-controller-fastled.yaml
@@ -30,6 +30,9 @@ logger:
 
 ota:
 
+dashboard_import:
+  package_import_url: github://lizardsystems/yawl-controller/firmware/ESPHome/yawl-controller-fastled.yaml
+
 web_server:
   port: 80
 
