--- a/firmware/ESPHome/yawl-controller-fastled.yaml
+++ b/firmware/ESPHome/yawl-controller-fastled.yaml
@@ -15,10 +15,6 @@ esphome:
 
 wifi:
   ap: {}
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  power_save_mode: none
 
 
 captive_portal:
@@ -29,9 +25,6 @@ logger:
   esp8266_store_log_strings_in_flash: false
 
 ota:
-
-dashboard_import:
-  package_import_url: github://lizardsystems/yawl-controller/firmware/ESPHome/yawl-controller-fastled.yaml
 
 web_server:
   port: 80
@@ -116,6 +109,12 @@ button:
     name: ${friendly_node_name} Restart
     id: ${node_id}_restart
     icon: "mdi:restart"
+  - platform: shutdown
+    name: ${friendly_node_name} Shutdown
+    id: ${node_id}_shutdown
+  - platform: safe_mode
+    name: ${friendly_node_name} Restart (Safe Mode)"
+    id: ${node_id}_safe_mode
 
 switch:
   - platform: gpio
